<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_color_2"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mr_cashier"
        android:gravity="center"
        android:textSize="38sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        />
    <EditText
        android:id="@+id/input"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_amount"
        android:textColorHint="@color/white"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:padding="15dp"
        android:layout_gravity="center"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:background= "@drawable/btn_3_drawable"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:textSize="16sp"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/r100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/r50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/r10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/r5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/r2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/r1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
</androidx.appcompat.widget.LinearLayoutCompat>